After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 628876 - Wrong error description
Wrong error description
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other All
: Normal trivial
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2010-09-06 12:02 UTC by Jonathan Conder
Modified: 2010-09-24 11:57 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jonathan Conder 2010-09-06 12:02:19 UTC
Hi,

In gio/gunixoutputstream.c there is a call to write() which will report "Error reading from unix" on failure (rather than "Error writing to unix" like it should). It is currently on line 438, but it should be easy to find if it moves.

Thanks
Comment 1 Christian Dywan 2010-09-24 11:57:58 UTC
Thanks for your report. This is fixed in git master.