Correct error message when GUnixOutputStream fails to write

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=628876